2016-09-30	"May the forces of evil become confused on the way to your
		 house."

		include/innocent-pear/omg.h :
		- now adds more random instruction prefixes when compiling
		  for x86-32 or x86-64
		- now tries to use `iretl' instruction, when compiling using
		  g++ for x86-32

2016-09-29	Link in `-latomic'.  (2)

		GNUmakefile :
		- now propagates results of target-side `-latomic' test to
		  compilation of host-side tools

		bin/innocent-pear-c++.cc :
		- ugly hack: now inserts `-latomic' option right before the
		  final doge_i[] module, if applicable -- since the
		  unscrambler may call `-latomic' routines (for i386), we
		  want to place the used routines outside the scrambled part
		  of .text

2016-09-28	Link in `-latomic'.

		configure :
		- now probes for `-latomic' library for both host and target

		lolwutconf/ :
		- bumped to 0afa88f95d

2016-09-27	allow_all -> allow_for_startup, and a bit more.

		include/innocent-pear/bbq.h :
		- renamed innocent_pear::impl::allow_all -> innocent_pear::
		  impl::allow_for_startup, to better reflect its true
		  semantics
		- removed innocent_pear::impl::allow_terminal_unsafes

		include/innocent-pear/rofl.h :
		- in debug mode, rofl<...>::tcflow(, TCOOFF) for each seed
		  will stop logging after being called a few hundred times
		  (unless there is an `unsigned long' overflow...)

		include/innocent-pear/omg.h ,
		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-02.cc ,
		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc ,
		share/innocent-pear/doge-05.cc ,
		share/innocent-pear/doge-06.cc ,
		share/innocent-pear/doge-07.cc ,
		test/test-kthxbai.cc ,
		test/test-kthxbai-p.cc ,
		test/test-orly.cc ,
		- updated per bbq.h

		share/innocent-pear/moar.cc :
		- tweaked handling of large buffer sizes for calls to
		  KeccakWidth1600_SpongePRG_Feed(...)

2016-09-25	Further split unscrambling.  Fixed x86-64 red zone clobbering.
		Abstracted out pseudorandomness generation.
