@@ -1,3 +1,10 @@
+2016-10-01	"May the forces of evil become confused on the way to your
+		 house."  (2)
+
+		include/innocent-pear/omg.h :
+		- now tries to use `ldr pc, ...' instruction when compiling
+		  for ARM-32 in ARM or Thumb-32 mode
+
 2016-09-30	"May the forces of evil become confused on the way to your
 		 house."
 
